fix: caminho do botão dinamico

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,7 +11,7 @@
     </span>
 
      <ul id="menu">
-        <a id="home-link" href="index.html"><li>Início</li></a>
+        <a id="home-link" href="../index.html"><li>Início</li></a>
         <!--<li><a href="#">contato</a></li>-->
     </ul>
 </nav>
