fix: modificação no botão inicio atualizado

--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -11,7 +11,6 @@
     </span>
 
      <ul id="menu">
-        <a id="home-link" href="../index.html"><li>Início</li></a>
-        <!--<li><a href="#">contato</a></li>-->
+        <a id="home-link" href="javascript:void(0);"><li>Início</li></a>
     </ul>
 </nav>
